fixed spacing around images & nav

--- a/home.css
+++ b/home.css
@@ -2,6 +2,7 @@ body {
     font-family:'Raleway', sans-serif, Arial;
     background-color:white;
     margin-left:20px;
+    margin-right:20px;
     color:#14331c;
 }
 
@@ -19,8 +20,8 @@ body {
 
 .link {
     font-size:20px;
-    margin-left:20px;
-    margin-right:20px;
+    margin-left:15px;
+    margin-right:15px;
 }
 
 hr {
@@ -50,9 +51,12 @@ a {
     color:#369652;
 }
 
-.img {
+img {
     float:left;
-    margin-right:40px;
+    margin-right:48px;
+    margin-bottom:20px;
+    max-width:100%;
+    max-height:100%;
 }
 
 .unbulleted {
